Add SQL to store data

--- a/app/src/main/res/layout/activity_news_clicked.xml
+++ b/app/src/main/res/layout/activity_news_clicked.xml
@@ -144,6 +144,7 @@
         android:elevation="10dp">
 
         <ImageButton
+            android:id="@+id/home_buuton"
             android:layout_width="45dp"
             android:layout_height="45dp"
             android:layout_marginStart="5dp"
