--- a/app/src/main/res/layout/activity_saved_data.xml
+++ b/app/src/main/res/layout/activity_saved_data.xml
@@ -1,9 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".saved_data">
+    tools:context=".Menu_class.saved_data"
+    android:id="@+id/swipe_container_savedData"
+    android:padding="5dp">
 
-</android.support.constraint.ConstraintLayout>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerview_savedData"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
+
+</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
