--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,10 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_height="match_parent"
+    android:layout_width="match_parent"
+    android:id="@+id/swipe_container"
+    >
+
+<FrameLayout
+    android:layout_height="match_parent"
     android:layout_width="match_parent">
+
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Fetching Data"
+        android:textColor="@color/black"
+        android:layout_centerInParent="true"
+        android:id="@+id/text"
+        android:layout_gravity="center"
+        android:textSize="20sp" />
 
     <Button
         android:layout_width="wrap_content"
@@ -15,20 +32,12 @@
         android:layout_gravity="center"
         android:layout_margin="10dp"
         android:visibility="gone"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Fetching Data"
-        android:textColor="@color/black"
-        android:layout_centerInParent="true"
-        android:id="@+id/text"
-        android:textSize="20sp"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/recyclerView"/>
 
+</FrameLayout>
 
-</RelativeLayout>
-
+</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
