--- a/app/src/main/res/layout/news_frame.xml
+++ b/app/src/main/res/layout/news_frame.xml
@@ -32,7 +32,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:alpha="0.25"
-            android:src="@color/colorAccent" />
+            android:id="@+id/back_color"/>
 
         <TextView
             android:id="@+id/newsTitle"
