--- a/app/src/main/res/menu/side_menu.xml
+++ b/app/src/main/res/menu/side_menu.xml
@@ -10,7 +10,7 @@
         android:title="Saved"/>
     <item android:id="@+id/about"
         android:title="About"/>
-    <item android:id="@+id/setting"
+    <item android:id="@+id/settings"
         android:title="Setting"/>
     <item android:id="@+id/share"
         android:title="Share"/>
